--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           data-aos="zoom-in"
           data-aos-delay="250"
         >
-          <div class="col-xl-2 col-md-4">
+          <div class="col-xl-2 col-md-4 deleteIcon">
             <div class="icon-box">
               <i class="ri-store-line"></i>
               <h3><a href="">Lorem Ipsum</a></h3>
