--- a/index.html
+++ b/index.html
@@ -70,29 +70,7 @@
             </li>
             <li><a class="nav-link scrollto" href="#team">Team</a></li>
             <li class="dropdown">
-              <a href="#"
-                ><span>Drop Down</span> <i class="bi bi-chevron-down"></i
-              ></a>
-              <ul>
-                <li><a href="#">Drop Down 1</a></li>
-                <li class="dropdown">
-                  <a href="#"
-                    ><span>Deep Drop Down</span>
-                    <i class="bi bi-chevron-right"></i
-                  ></a>
-                  <ul>
-                    <li><a href="#">Deep Drop Down 1</a></li>
-                    <li><a href="#">Deep Drop Down 2</a></li>
-                    <li><a href="#">Deep Drop Down 3</a></li>
-                    <li><a href="#">Deep Drop Down 4</a></li>
-                    <li><a href="#">Deep Drop Down 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Drop Down 2</a></li>
-                <li><a href="#">Drop Down 3</a></li>
-                <li><a href="#">Drop Down 4</a></li>
-              </ul>
-            </li>
+            <!-- removed additional dropdowns -fg -->
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -132,25 +110,25 @@
           <div class="col-xl-2 col-md-4">
             <div class="icon-box">
               <i class="ri-bar-chart-box-line"></i>
-              <h3><a href="">Dolor Sitema</a></h3>
+              <h3><a href="">Customized Website Designs</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4">
             <div class="icon-box">
               <i class="ri-calendar-todo-line"></i>
-              <h3><a href="">Sedare Perspiciatis</a></h3>
+              <h3><a href="">Mobile App Development</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4">
             <div class="icon-box">
               <i class="ri-paint-brush-line"></i>
-              <h3><a href="">Magni Dolores</a></h3>
+              <h3><a href="">Quality Designs and Brand Assets</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4">
             <div class="icon-box">
               <i class="ri-database-2-line"></i>
-              <h3><a href="">Nemos Enimade</a></h3>
+              <h3><a href="">Professional Work with Good Turn Around</a></h3>
             </div>
           </div>
         </div>
