display non to the clients section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
             </li>
             <li><a class="nav-link scrollto" href="#team">Team</a></li>
             <li class="dropdown">
-            <!-- removed additional dropdowns -fg -->
+              <!-- removed additional dropdowns -fg -->
+            </li>
+
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -91,8 +93,8 @@
           data-aos-delay="150"
         >
           <div class="col-xl-6 col-lg-8">
-            <h1>Powerful Digital Solutions With Gp<span>.</span></h1>
-            <h2>We are team of talented digital marketers</h2>
+            <h1>LongevIT logo<span>.</span></h1>
+            <h2>Your Business, Our Design, Global Reach!</h2>
           </div>
         </div>
 
@@ -153,10 +155,7 @@
               data-aos="fade-right"
               data-aos-delay="100"
             >
-              <h3>
-                Voluptatem dignissimos provident quasi corporis voluptates sit
-                assumenda.
-              </h3>
+              <h3>Let us show the world your business with our design</h3>
               <p class="fst-italic">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
