--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/logo_fire.png" rel="icon" />
+    <link href="assets/img/logo_black.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -55,7 +55,7 @@
         class="container d-flex align-items-center justify-content-lg-between"
       >
         <h1 class="logo me-auto me-lg-0">
-          <a href="index.html">Gp<span>.</span></a>
+          <a href="index.html">LongevIT<span>.</span></a>
         </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -93,12 +93,15 @@
           data-aos-delay="150"
         >
           <div class="col-xl-6 col-lg-8">
-            <h1>LongevIT logo<span>.</span></h1>
+            <h1>
+              <!--old title--><span
+              ></span>
+            </h1>
             <h2>Your Business, Our Design, Global Reach!</h2>
           </div>
         </div>
 
-        <div
+        <!--<div
           class="row gy-4 mt-5 justify-content-center"
           data-aos="zoom-in"
           data-aos-delay="250"
@@ -134,8 +137,8 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </div>-->
+    </section> 
     <!-- End Hero -->
 
     <main id="main">
