--- a/index.html
+++ b/index.html
@@ -337,10 +337,9 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                <h4><a href="">Lorem Ipsum</a></h4>
+                <h4><a href="">Web Designs</a></h4>
                 <p>
-                  Voluptatum deleniti atque corrupti quos dolores et quas
-                  molestias excepturi
+                  We take pride in making user-friendly designs to cultivate your brand 
                 </p>
               </div>
             </div>
@@ -352,10 +351,9 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-file"></i></div>
-                <h4><a href="">Sed ut perspiciatis</a></h4>
+                <h4><a href="">Web Development</a></h4>
                 <p>
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore
+                  Educated, passionate and innovative softeware engineers creating visually appealing designs.
                 </p>
               </div>
             </div>
@@ -367,10 +365,9 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-tachometer"></i></div>
-                <h4><a href="">Magni Dolores</a></h4>
+                <h4><a href="">App Development</a></h4>
                 <p>
-                  Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                  qui officia
+                  Longing create our own community of 
                 </p>
               </div>
             </div>
@@ -382,10 +379,9 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-world"></i></div>
-                <h4><a href="">Nemo Enim</a></h4>
+                <h4><a href="">Consulations</a></h4>
                 <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                  blanditiis
+                  You Designs our designs global reach, starts with a 30 min consulations
                 </p>
               </div>
             </div>
@@ -397,10 +393,9 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-slideshow"></i></div>
-                <h4><a href="">Dele cardo</a></h4>
+                <h4><a href="">UX/UI Designs</a></h4>
                 <p>
-                  Quis consequatur saepe eligendi voluptatem consequatur dolor
-                  consequuntur
+                  Whether its website or app, we grantee posiitive all user experiences and ensure your clients keeps coming back
                 </p>
               </div>
             </div>
@@ -412,10 +407,9 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-arch"></i></div>
-                <h4><a href="">Divera don</a></h4>
+                <h4><a href="">Logo, Brand and Flyer Designs</a></h4>
                 <p>
-                  Modi nostrum vel laborum. Porro fugit error sit minus sapiente
-                  sit aspernatur
+                  Looking to get your brand of the ground with professional designs and creative logos
                 </p>
               </div>
             </div>
@@ -424,18 +418,16 @@
       </section>
       <!-- End Services Section -->
 
-      <!-- ======= Cta Section ======= -->
+      <!-- ======= Cta Section ======= get background that is network style -->
       <section id="cta" class="cta">
         <div class="container" data-aos="zoom-in">
           <div class="text-center">
-            <h3>Call To Action</h3>
+            <h3>Contact Us</h3>
             <p>
-              Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-              cupidatat non proident, sunt in culpa qui officia deserunt mollit
-              anim id est laborum.
+              Ready to revolutionize your tech solutions? Contact us today to explore how we can innovate together and drive lasting success for your business.
             </p>
-            <a class="cta-btn" href="#">Call To Action</a>
+            <a class="cta-btn" href="#">Contact us</a>
+            <!-- remove # and add the link to the calenday -->
           </div>
         </div>
       </section>
