changed icons, fixed feature section

--- a/index.html
+++ b/index.html
@@ -273,10 +273,9 @@
                 data-aos-delay="150"
               >
                 <i class="bx bx-receipt"></i>
-                <h4>Est labore ad</h4>
+                <h4>Educated IT Professionals</h4>
                 <p>
-                  Consequuntur sunt aut quasi enim aliquam quae harum pariatur
-                  laboris nisi ut aliquip
+                  Fullstack Developers skilled in multiple libraries, Backend, Databases and Cloud Computing.
                 </p>
               </div>
               <div
@@ -285,10 +284,9 @@
                 data-aos-delay="150"
               >
                 <i class="bx bx-cube-alt"></i>
-                <h4>Harum esse qui</h4>
+                <h4>Professional Partnerships</h4>
                 <p>
-                  Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                  qui officia deserunt
+                  Building long lasting relationships with businesses and entrepreneurs 
                 </p>
               </div>
               <div
@@ -297,24 +295,12 @@
                 data-aos-delay="150"
               >
                 <i class="bx bx-images"></i>
-                <h4>Aut occaecati</h4>
+                <h4>Bridging Barriers</h4>
                 <p>
-                  Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut
-                  maiores omnis facere
+                  Creating vessels of support to assist and build LongevIT within their businesses
                 </p>
               </div>
-              <div
-                class="icon-box mt-5"
-                data-aos="zoom-in"
-                data-aos-delay="150"
-              >
-                <i class="bx bx-shield"></i>
-                <h4>Beatae veritatis</h4>
-                <p>
-                  Expedita veritatis consequuntur nihil tempore laudantium vitae
-                  denat pacta
-                </p>
-              </div>
+             
             </div>
           </div>
         </div>
@@ -364,10 +350,10 @@
               data-aos-delay="300"
             >
               <div class="icon-box">
-                <div class="icon"><i class="bx bx-tachometer"></i></div>
+                <div class="icon"><i class="bx bx-game"></i></div>
                 <h4><a href="">App Development</a></h4>
                 <p>
-                  Longing create our own community of 
+                  Building your own community or creating a software for easier checkout for your store, either way we got you.
                 </p>
               </div>
             </div>
@@ -378,7 +364,7 @@
               data-aos-delay="100"
             >
               <div class="icon-box">
-                <div class="icon"><i class="bx bx-world"></i></div>
+                <div class="icon"><i class="bx bx-phone"></i></div>
                 <h4><a href="">Consulations</a></h4>
                 <p>
                   You Designs our designs global reach, starts with a 30 min consulations
