switched out images

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               data-aos="fade-left"
               data-aos-delay="100"
             >
-              <img src="assets/img/about.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/propImages/togetherness.png" class="img-fluid" alt="" />
             </div>
             <div
               class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content"
@@ -263,7 +263,7 @@
           <div class="row">
             <div
               class="image col-lg-6"
-              style="background-image: url('assets/img/features.jpg')"
+              style="background-image: url('assets/img/propImages/teamwork.png')"
               data-aos="fade-right"
             ></div>
             <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
@@ -350,7 +350,7 @@
               data-aos-delay="300"
             >
               <div class="icon-box">
-                <div class="icon"><i class="bx bx-game"></i></div>
+                <div class="icon"><i class="bx bx-code"></i></div>
                 <h4><a href="">App Development</a></h4>
                 <p>
                   Building your own community or creating a software for easier checkout for your store, either way we got you.
