commit before merge?

--- a/index.html
+++ b/index.html
@@ -312,9 +312,11 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                <h4><a href="">Web Designs</a></h4>
+                <h4><a href="">Web Designs & Development</a></h4>
                 <p>
-                  We take pride in making user-friendly designs to cultivate your brand 
+                  We take pride in making user-friendly web applications to cultivate your brand. 
+                  Educated, passionate and innovative software engineers creating 
+                  visually appealing designs. 
                 </p>
               </div>
             </div>
@@ -326,9 +328,10 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-file"></i></div>
-                <h4><a href="">Web Development</a></h4>
+                <h4><a href="">Maintenace</a></h4>
                 <p>
-                  Educated, passionate and innovative softeware engineers creating visually appealing designs.
+                  Providing clients with peace of mind and 
+                  ensuring the continued smooth operation of their digital assets.
                 </p>
               </div>
             </div>
@@ -342,7 +345,7 @@
                 <div class="icon"><i class="bx bx-code"></i></div>
                 <h4><a href="">App Development</a></h4>
                 <p>
-                  Building your own community or creating a software for easier checkout for your store, either way we got you.
+                  Building your own community and creating a customize mobile application.
                 </p>
               </div>
             </div>
@@ -397,11 +400,11 @@
       <section id="cta" class="cta">
         <div class="container" data-aos="zoom-in">
           <div class="text-center">
-            <h3>Contact Us</h3>
+            <h3>Expert Consultation</h3>
             <p>
               Ready to revolutionize your tech solutions? Contact us today to explore how we can innovate together and drive lasting success for your business.
             </p>
-            <a class="cta-btn" href="#">Contact us</a>
+            <a class="cta-btn" href="#">FREE Consulations</a>
             <!-- remove # and add the link to the calenday -->
           </div>
         </div>
@@ -862,7 +865,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="200">
                 <div class="member-img">
                   <img
-                    src="assets/img/team/team-2.jpg"
+                    src="assets/img/team/Fab.jpeg"
                     class="img-fluid"
                     alt=""
                   />
