added to-do list'

--- a/index.html
+++ b/index.html
@@ -469,22 +469,22 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-3.jpg"
+                  src="assets/img/portfolio/todo_ah.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>App 2</h4>
-                  <p>App</p>
+                  <h4>JavaScript to-do list</h4>
+                  <p>This to-do list is able to add, remove, and cross out items</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-3.jpg"
+                      href="assets/img/portfolio/todo_ah.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="App 2"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="https://astylestodo.netlify.app" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
