--- a/index.html
+++ b/index.html
@@ -423,9 +423,9 @@
             <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All</li>
-                <li data-filter=".filter-app">Web</li>
-                <li data-filter=".filter-card">Demo</li>
-                <li data-filter=".filter-web">Game</li>
+<!--                 <li data-filter=".filter-app"></li>
+ -->                <li data-filter=".filter-card">Graphics</li>
+                <li data-filter=".filter-web">Web</li>
               </ul>
             </div>
           </div>
@@ -435,7 +435,7 @@
             data-aos="fade-up"
             data-aos-delay="200"
           >
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Calculator copy.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -466,7 +466,7 @@
             </div>
           </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio/todo_ah.png"
@@ -474,7 +474,7 @@
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>JavaScript to-do list</h4>
+                  <h4>JavaScript To-Do List</h4>
                   <p>This to-do list is able to add, remove, and cross out items</p>
                   <div class="portfolio-links">
                     <a
@@ -522,25 +522,25 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-6.jpg"
+                  src="assets/img/portfolio/flyers/alumni.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>App 3</h4>
-                  <p>App</p>
+                  <h4>Graphic Flyer</h4>
+                  <p>Wareham Community Youth Empowerment's Almuni Game</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-6.jpg"
+                      href="assets/img/portfolio/flyers/alumni.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="App 3"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="#" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
@@ -548,25 +548,25 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-7.jpg"
+                  src="assets/img/portfolio/intervu_ah.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Card 1</h4>
-                  <p>Card</p>
+                  <h4>Full Stack Web App</h4>
+                  <p>Full Stack JS application w/ MERN stack, authentication, and APIs</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-7.jpg"
+                      href="assets/img/portfolio/intervu_ah.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Card 1"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="https://intervu.cyclic.app/" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
@@ -574,25 +574,25 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-8.jpg"
+                  src="assets/img/portfolio/tc_ah.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Card 3</h4>
-                  <p>Card</p>
+                  <h4>Tech Crunch landing page</h4>
+                  <p>HTML, CSS</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-8.jpg"
+                      href="assets/img/portfolio/techCrunch_ah.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="Card 3"
+                      title="Tech Crunch landing page"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="#" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
@@ -600,7 +600,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img src="assets/img/portfolio/Workout Generator copy.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -856,7 +856,7 @@
                 </div>
                 <div class="member-info">
                   <h4>Ashley Hachey</h4>
-                  <span>CEO, Founder of LongevIT</span>
+                  <span>Co-CEO, Founder of LongevIT</span>
                 </div>
               </div>
             </div>
@@ -877,8 +877,8 @@
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Sarah Jhonson</h4>
-                  <span>Product Manager</span>
+                  <h4>Fabiola Garcon</h4>
+                  <span>Co-CEO, Founder of LongevIT</span>
                 </div>
               </div>
             </div>
