cleaned up certain portfolio

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                 <h4>Calculator</h4>
                 <p>JavaScript powered fully functioning calculator</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/Calculator copy.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Calculator"><i class="bx bx-plus"></i></a>
                   <a href="https://calculator-codefabfits-projects.vercel.app/"><i class="bx bx-link"></i></a> 
 
                   <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
@@ -458,7 +458,7 @@
                 <h4>JS Drum Kit</h4>
                 <p>JavaScript Drumkit Set, best played on computer</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/Javascript Drum Kit copy.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="JS Drum Kit"><i class="bx bx-plus"></i></a>
                   <a href="https://deluxe-rolypoly-9e3776.netlify.app/"><i class="bx bx-link"></i></a> 
                   <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
@@ -478,10 +478,10 @@
                   <p>This to-do list is able to add, remove, and cross out items</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/todo_ah.png"
+                      href="assets/img/portfolio/todoSite.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="App 2"
+                      title="JavaScript To-Do List"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a href="https://astylestodo.netlify.app" title="More Details"
@@ -499,7 +499,7 @@
                   <h4>Fitness Quiz</h4>
                   <p>Are you FabFitReady? Take the Quiz!</p>
                   <div class="portfolio-links">
-                    <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                    <a href="assets/img/portfolio/Fitness Quiz copy.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fitness Quiz"><i class="bx bx-plus"></i></a>
                     <a href="https://fit-quiz-app.vercel.app/"><i class="bx bx-link"></i></a>
                     <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"> -->
                   </div>
@@ -514,7 +514,7 @@
                   <h4>Rock Paper Sciossors</h4>
                   <p>Play RPS against the computer, can you win?</p>
                   <div class="portfolio-links">
-                    <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                    <a href="assets/img/portfolio/RSPG copy.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Rock Paper Sciossors"><i class="bx bx-plus"></i></a>
                     <a href="https://rps-game-codefabfits-projects.vercel.app/"></a><i class="bx bx-link"></i></a>
                     <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"> -->
                   </div>
@@ -607,7 +607,7 @@
                   <h4>FabFit WOD</h4>
                   <p>Glutes Building Workout Generator</p>
                   <div class="portfolio-links">
-                    <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                    <a href="assets/img/portfolio/Workout Generator copy.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                     <a href="https://fabfitwod.netlify.app/"><i class="bx bx-link"></i></a>
                     <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                   </div>
